add header and about page

--- a/index.html
+++ b/index.html
@@ -4,9 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
+    <div class="header-bar">
+        <div class="logo">
+            Career Rater
+        </div>
+        <div class="search">
+            search-bar
+        </div>
+    </div>
+    <div class="about">
+        <div>
+            <h1>
+                What is Career Rater?
+            </h1>
+            <p>
+                Career Rater allows employees of a company to safely and anonymously rate companies and workplaces online. 
+                Our goal is creating a safer workplace in addition to improving job security. Rating are based off of 
+                factors such as job stability, satisfaction, environment, and others. 
+                Ratings are then posted online for public viewing.
+            </p>
+        </div>
+    </div>
+    <div>
+        add a review
+    </div>
     <p>Nothing of note</p>
 </body>
 </html>
