--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
             Career Rater
         </div>
         <div class="search">
-            search-bar
+            <form action="" class="search-bar" >
+                <input type="text" placeholder="search a workplace" name="n">
+                <button type="submit"><img src="images/search-icon.png"></button>
+            </form>
         </div>
     </div>
     <div class="about">
