adding to main page, will have to organize files afterward

--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
             </p>
         </div>
     </div>
-    <div>
+    <div class="highlight-review">
         add a review
     </div>
-    <p>Nothing of note</p>
 </body>
 </html>
