fix file locations

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
+    <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
     <title>Career Rater</title>
 </head>
@@ -36,7 +36,7 @@
     <div class="highlight-review">
         <div>
             <h2>
-                Get started by entering your company
+                Get started by entering your company!
             </h2>
             <form method="post">
                 <input type="text" name="company" minlength="1" maxlength="100" placeholder="Your company" autofocus required><br>
